# Basic-Computer-Vision-algo

./: README.md
Viola Jones Detection/: CMakeLists.txt  Classifieur.cpp  Classifieur.h  Image.cpp  Image.h  Makefile  face_detection.cpp
binary segementation via Graph cut/: graphCuts.cpp
canny edge detection/: CMakeLists.txt  canny.cpp
epipolar line/: epi.cpp
image stitching/: homographie.cpp
